--- a/tela-login/src/components/Login.css
+++ b/tela-login/src/components/Login.css
@@ -1,59 +1,160 @@
+* {
+  background: #F8FAFC;
+  font-family: 'Titillium Web';
+}
+
+main {
+  position: absolute;
+  left: 15vh;
+}
+
 .logo {
-    width: 150px;
-    height: 150px;
-    margin-bottom: 20px;
-  }
-  
-  .form {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 5px;
-  }
-  
-  .textos {
-    margin-bottom: 20px;
-  }
-  
-  h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    margin-bottom: 10px;
-  }
-  
-  form label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  a {
-    font-size: 14px;
-    color: #999;
-    text-decoration: none;
-    margin-bottom: 10px;
-    display: inline-block;
-  }
-  
-  button[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #45a049;
-  }
+  position: absolute;
+  width: 159.5px;
+  height: 54px;
+  left: 112px;
+  top: 40px;
+}
+
+.form {
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 0px;
+  gap: 40px;
+  position: absolute;
+  width: 24rem;
+  height: 30.1875rem;
+  left: 7rem;
+  top: 208px;
+}
+
+.div-senha {
+  display: flex;
+  justify-content: space-between;
+}
+
+h1 {
+  width: 316px;
+  height: 55px; 
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 55px;
+  color: #1E293B;
+  margin-bottom: 1rem;
+}
+
+.texto-login {
+  display: flex;
+  justify-content: flex-end;
+  width: 351px;
+  height: 48px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #475569;
+}
+
+.texto-form {
+  width: 40px;
+  height: 21px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  color: #1E293B;
+  flex: none;
+  margin-bottom: 0.5rem;
+}
+
+form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input[type="email"],
+input[type="password"] {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 16px 12px;
+  gap: 10px;
+  width: 384px;
+  height: 53px;
+  background: #FFFFFF;
+  border: 1px solid #E2E8F0;
+  border-radius: 4px;
+  margin-bottom: 2.5rem;
+}
+
+a {
+  width: 113px;
+  height: 21px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  color: #7C3AED;
+  flex: none;
+  text-decoration: none;
+}
+
+button[type="submit"] {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 24px;
+  width: 384px;
+  background: #7C3AED;
+  border-radius: 4px;
+  border: none;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+
+button[type="submit"]:hover {
+  background-color: #9F67FF;
+  border: none;
+}
+
+.texto-pos-botao {
+  width: 263px;
+  height: 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #475569;
+  flex: none;
+}
+
+input:focus-visible {
+  outline-color: #7C3AED;
+}
+
+#mostrarSenha {
+  cursor: pointer;
+}
+
+#iconeOlho {
+  cursor: pointer;
+}
+
+.fa-eye-slash:before {
+  content: "\f070";
+}
+
+.fa-eye:before {
+  content: "\f06e";
+}
